Bug 111884 - Parsererror in the molcalculator
Summary: Parsererror in the molcalculator
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: Calculator (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-01 16:17 UTC by Carsten Niehaus
Modified: 2005-09-04 19:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carsten Niehaus 2005-09-01 16:17:21 UTC
Version:            (using KDE KDE 3.4.90)
Installed from:    Compiled From Sources

(Co)2 --> calculated as Co3
(CoCo5)2 --> calculated as Co8

It seems that numbers are added and not multiplied.
Comment 1 Inge Wallin 2005-09-04 19:24:22 UTC
SVN commit 457090 by ingwa:

Fix bug 111884: Parsererror in the molcalculator

This patch rewrites the whole calculation of the contents of a
molecule.  It turned out to be a lot more complicated than expected.
Now it works flawlessly, though.

BUG: 111884


 M  +68 -111   molcalcwidget.cpp  
 M  +14 -30    molcalcwidget.h  
 M  +132 -83   moleculeparser.cpp  
 M  +57 -6     moleculeparser.h