Fix bug 111884: Parsererror in the molcalculator

This patch rewrites the whole calculation of the contents of a
molecule.  It turned out to be a lot more complicated than expected.
Now it works flawlessly, though.

BUG: 111884

svn path=/branches/KDE/3.5/kdeedu/kalzium/; revision=457090